Updated brand controller

--- a/Areas/admin/Views/Brand/Index.cshtml
+++ b/Areas/admin/Views/Brand/Index.cshtml
@@ -1,10 +1,6 @@
 ﻿
 @model List<Brand>
 
-@{
-    ViewData["Title"] = "Index";
-    int counter = 1;
-}
 
 <div class="row justify-content-between align-items-center">
     <div class="col-lg-2">
@@ -15,35 +11,8 @@
     </div>
 </div>
 
-<table class="table table-hover table-bordered table-striped">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Image</th>
-      <th scope="col">Settings</th>
-    </tr>
-  </thead>
-  <tbody>
-    @foreach (Brand item in Model)
-    {
-            <tr>
-              <th>@counter</th>
-              <td>@item.Image</td>
-              <td>
-                   <a asp-controller="brand" asp-action="update" asp-area="admin" asp-route-id="@item.ID" class="btn btn-primary">
-                      <i class="fa-solid fa-pen-to-square"></i>
-                  </a>
-                  <a asp-controller="brand" asp-action="delete" asp-area="admin" asp-route-id="@item.ID" class="btn btn-danger">
-                      <i class="fa-regular fa-trash-can"></i>
-                  </a>
-                  <a class="btn btn-secondary">
-                    <i class="fa-solid fa-circle-info"></i>
-                  </a>
-              </td>
-            </tr>
-            counter++;
-    }
-  </tbody>
-</table>
 
+<div class="table-content">
+    @await Html.PartialAsync("_BrandIndexPartial",Model)
+</div>
 
