--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -183,11 +183,11 @@
                                     <div class="nav-profile-header">
                                        <div class="d-flex align-items-center">
                                             <div class="avatar avatar-circle avatar-image">
-                                                <img src="~/admin/assets/images/avatars/thumb-1.jpg" alt="">
+                                                <img src="~/admin/assets/images/avatars/thumb-14.jpg" alt="">
                                             </div>
                                             <div class="d-flex flex-column ms-1">
-                                                <span class="fw-bold text-dark">Julio Baker</span>
-                                                <span class="font-size-sm">Julio@themenate.com</span>
+                                                <span class="fw-bold text-dark">Namiq Mamedov</span>
+                                                <span class="font-size-sm">namiq@protonmail.com</span>
                                             </div>
                                        </div>
                                     </div>
