--- a/Areas/admin/Views/Brand/Index.cshtml
+++ b/Areas/admin/Views/Brand/Index.cshtml
@@ -16,3 +16,43 @@
     @await Html.PartialAsync("_BrandIndexPartial",Model)
 </div>
 
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <nav aria-label="Page navigation example">
+              <ul class="pagination" style="justify-content: center;">
+                 <li class="page-item">
+                  <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="1" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@ViewBag.Page "  aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                </li>
+                  @for(int i = 1; i <= ViewBag.PageCount; i++)
+                  {
+                       <li class="page-item"><a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@i">@i</a></li>   
+                  }
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;&raquo;</span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+        </div>
+    </div>
+</div>
+
