--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -233,7 +233,7 @@
                  </div>
                  <ul class="nav-menu">
                     <li class="nav-menu-item router-link-active">
-                        <a href="index-2.html">
+                        <a asp-controller="home" asp-action="index">
                             <i class="feather icon-home"></i>
                             <span class="nav-menu-item-title">Dashboard</span>
                         </a>
@@ -241,13 +241,13 @@
                     <li class="nav-group-title">APPS</li>
                     <li class="nav-menu-item">
                         <a asp-controller="product" asp-action="index">
-                            <i class="feather icon-mail"></i>
+                        <i class="fa-solid fa-box-open"></i>
                             <span class="nav-menu-item-title">Product</span>
                         </a>
                     </li>
                     <li class="nav-menu-item">
                         <a asp-controller="brand" asp-action="index">
-                            <i class="feather icon-mail"></i>
+                           <i class="fa-solid fa-tags"></i>
                             <span class="nav-menu-item-title">Brand</span>
                         </a>
                     </li>
@@ -256,188 +256,6 @@
                             <i class="feather icon-message-circle"></i>
                             <span class="nav-menu-item-title">Chat</span>
                         </a>
-                    </li>
-                    <li class="nav-menu-item">
-                        <a href="v-calendar.html">
-                            <i class="feather icon-calendar"></i>
-                            <span class="nav-menu-item-title">Calendar</span>
-                        </a>
-                    </li>
-                    <li class="nav-group-title">USER INTERFACE</li>
-                    <li class="nav-submenu">
-                        <a class="nav-submenu-title">
-                            <i class="feather icon-box"></i>
-                            <span>UI Elements</span>
-                            <i class="nav-submenu-arrow"></i>
-                        </a>
-                        <ul class="nav-menu menu-collapse">
-                            <li class="nav-menu-item">
-                                <a href="v-avatar.html">Avatar</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-alert.html">Alert</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-badge.html">Badge</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-buttons.html">Buttons</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-cards.html">Cards</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-icons.html">Icons</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-lists.html">Lists</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-typography.html">Typography</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-submenu">
-                        <a class="nav-submenu-title">
-                            <i class="feather icon-package"></i>
-                            <span>Components</span>
-                            <i class="nav-submenu-arrow"></i>
-                        </a>
-                        <ul class="nav-menu menu-collapse">
-                            <li class="nav-menu-item">
-                                <a href="v-accordion.html">Accordion</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-carousel.html">Carousel</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-dropdown.html">Dropdown</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-modals.html">Modals</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-toasts.html">Toasts</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-popover.html">Popover</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-progress.html">Progress</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-tabs.html">Tabs</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-tooltips.html">Tooltips</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-submenu">
-                        <a class="nav-submenu-title">
-                            <i class="feather icon-file-text"></i>
-                            <span>Forms</span>
-                            <i class="nav-submenu-arrow"></i>
-                        </a>
-                        <ul class="nav-menu menu-collapse">
-                            <li class="nav-menu-item">
-                                <a href="v-form-elements.html">Form Elements</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-form-layouts.html">Form Layouts</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-form-validation.html">Form Validation</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-submenu">
-                        <a class="nav-submenu-title">
-                            <i class="feather icon-grid"></i>
-                            <span>Tables</span>
-                            <i class="nav-submenu-arrow"></i>
-                        </a>
-                        <ul class="nav-menu menu-collapse">
-                            <li class="nav-menu-item">
-                                <a href="v-basic-table.html">Basic Table</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-data-table.html">Data Table</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-menu-item">
-                        <a href="v-chart.html">
-                            <i class="feather icon-bar-chart"></i>
-                            <span class="nav-menu-item-title">Chart</span>
-                        </a>
-                    </li>
-                    <li class="nav-group-title">PAGES</li>
-                    <li class="nav-submenu">
-                        <a class="nav-submenu-title">
-                            <i class="feather icon-settings"></i>
-                            <span>Utility</span>
-                            <i class="nav-submenu-arrow"></i>
-                        </a>
-                        <ul class="nav-menu menu-collapse">
-                            <li class="nav-menu-item">
-                                <a href="v-profile-personal.html">Profile</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-invoice.html">Invoice</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-faq.html">FAQ</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-pricing.html">Pricing</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="v-user-list.html">User List</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-submenu">
-                        <a class="nav-submenu-title">
-                            <i class="feather icon-lock"></i>
-                            <span>Auth</span>
-                            <i class="nav-submenu-arrow"></i>
-                        </a>
-                        <ul class="nav-menu menu-collapse">
-                            <li class="nav-menu-item">
-                                <a href="login.html">Login</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="login-v2.html">Login v2</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="login-v3.html">Login v3</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="register.html">Register</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="register-v2.html">Register v2</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="register-v3.html">Register v3</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-submenu">
-                        <a class="nav-submenu-title">
-                            <i class="feather icon-slash"></i>
-                            <span>Errors</span>
-                            <i class="nav-submenu-arrow"></i>
-                        </a>
-                        <ul class="nav-menu menu-collapse">
-                            <li class="nav-menu-item">
-                                <a href="error.html">Error 1</a>
-                            </li>
-                            <li class="nav-menu-item">
-                                <a href="error-v2.html">Error 2</a>
-                            </li>
-                        </ul>
                     </li>
                 </ul>
             </div>
