--- a/Areas/admin/Views/_ViewImports.cshtml
+++ b/Areas/admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Wolmart.Ecommerce.Models
 @using Wolmart.Ecommerce.Services
+@using Wolmart.Ecommerce.ViewModels
