--- a/Areas/admin/Views/Brand/Index.cshtml
+++ b/Areas/admin/Views/Brand/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model List<Brand>
+@model PagenationList<Brand>
 
 
 <div class="row justify-content-between align-items-center">
@@ -22,35 +22,42 @@
         <div class="col-12">
             <nav aria-label="Page navigation example">
               <ul class="pagination" style="justify-content: center;">
-                 <li class="page-item">
-                  <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="1" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                </li>
-                <li class="page-item">
-                  <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@ViewBag.Page "  aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                </li>
-                  @for(int i = 1; i <= ViewBag.PageCount; i++)
+                    @if(Model.HasPrev)
+                    {
+                            <li class="page-item">
+                              <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="1" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;&laquo;</span>
+                                <span class="sr-only">Previous</span>
+                              </a>
+                            </li>
+                            <li class="page-item">
+                              <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@(Model.Page-1)"  aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                                <span class="sr-only">Previous</span>
+                              </a>
+                            </li>
+                    }
+                    @for(int i = 1; i <= Model.PageCount; i++)
                   {
                        <li class="page-item"><a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@i">@i</a></li>   
                   }
-                <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </li>
-                <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;&raquo;</span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </li>
-              </ul>
+                    
+                    @if (Model.Page < ViewBag.PageCount)
+                    {
+                        <li class="page-item">
+                                  <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@(Model.Page+1)" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                  </a>
+                                </li>
+                                <li class="page-item">
+                                  <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@(Model.PageCount)"  aria-label="Next">
+                                    <span aria-hidden="true">&raquo;&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                  </a>
+                        </li>        
+                    }
+                </ul>
             </nav>
         </div>
     </div>
