Updated category controller

--- a/Areas/admin/Views/Brand/Create.cshtml
+++ b/Areas/admin/Views/Brand/Create.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="form-input">
-  <form method="POST" asp-controller="brand" asp-action="create" asp-area="admin">
+  <form method="POST">
     <label asp-for="Image">Brand Image</label>
     <input asp-for="Image" placeholder="Image...">
     <span class="text-danger" asp-validation-for="Image"></span>
