--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -252,9 +252,9 @@
                         </a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="v-chat.html">
-                            <i class="feather icon-message-circle"></i>
-                            <span class="nav-menu-item-title">Chat</span>
+                        <a asp-controller="category" asp-action="index">
+                            <i class="fa-solid fa-border-all"></i>
+                            <span class="nav-menu-item-title">Category</span>
                         </a>
                     </li>
                 </ul>
