--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,19 +1,22 @@
 ﻿
-@model PagenationList<Brand>
+@model PagenationList<Category>
 
+@{
+    ViewData["Title"] = "Index";
+}
 
 <div class="row justify-content-between align-items-center">
     <div class="col-lg-2">
-        <h1>Brand</h1>
+        <h1>Category</h1>
     </div>
     <div class="col-lg-10 text-end new-post">
-        <a asp-controller="brand" asp-action="create" asp-area="admin" class="btn btn-success">New Post</a>
+        <a asp-controller="category" asp-action="create" asp-area="admin" class="btn btn-success">New Post</a>
     </div>
 </div>
 
 
 <div class="table-content">
-    @await Html.PartialAsync("_BrandIndexPartial",Model)
+    @await Html.PartialAsync("_CategoryIndexPartial",Model)
 </div>
 
 
@@ -25,33 +28,33 @@
                     @if(Model.HasPrev)
                     {
                             <li class="page-item">
-                              <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="1" aria-label="Previous">
+                              <a class="page-link" asp-area="admin" asp-controller="category" asp-action="index" asp-route-page="1" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;&laquo;</span>
                                 <span class="sr-only">Previous</span>
                               </a>
                             </li>
                             <li class="page-item">
-                              <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@(Model.Page-1)"  aria-label="Previous">
+                              <a class="page-link" asp-area="admin" asp-controller="category" asp-action="index" asp-route-page="@(Model.Page-1)"  aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                                 <span class="sr-only">Previous</span>
                               </a>
                             </li>
                     }
-                    @for(int i = 1; i <= Model.PageCount; i++)
+                  @for(int i = 1; i <= Model.PageCount; i++)
                   {
-                       <li class="page-item"><a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@i">@i</a></li>   
+                       <li class="page-item"><a class="page-link" asp-area="admin" asp-controller="category" asp-action="index" asp-route-page="@i">@i</a></li>   
                   }
                     
                     @if (Model.HasNext)
                     {
                         <li class="page-item">
-                                  <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@(Model.Page+1)" aria-label="Next">
+                                  <a class="page-link" asp-area="admin" asp-controller="category" asp-action="index" asp-route-page="@(Model.Page+1)" aria-label="Next">
                                     <span aria-hidden="true">&raquo;</span>
                                     <span class="sr-only">Next</span>
                                   </a>
                                 </li>
                                 <li class="page-item">
-                                  <a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@Model.PageCount"  aria-label="Next">
+                                  <a class="page-link" asp-area="admin" asp-controller="category" asp-action="index" asp-route-page="@Model.PageCount"  aria-label="Next">
                                     <span aria-hidden="true">&raquo;&raquo;</span>
                                     <span class="sr-only">Next</span>
                                   </a>
@@ -62,4 +65,6 @@
         </div>
     </div>
 </div>
+
+
 
