--- a/Areas/admin/Views/Brand/Index.cshtml
+++ b/Areas/admin/Views/Brand/Index.cshtml
@@ -39,7 +39,7 @@
                     }
                     @for(int i = 1; i <= Model.PageCount; i++)
                   {
-                       <li class="page-item"><a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@i">@i</a></li>   
+                       <li class="page-item @(Model.Page == i ? "active" : "")"><a class="page-link" asp-area="admin" asp-controller="brand" asp-action="index" asp-route-page="@i">@i</a></li>   
                   }
                     
                     @if (Model.HasNext)
