--- a/Areas/admin/Views/Category/Update.cshtml
+++ b/Areas/admin/Views/Category/Update.cshtml
@@ -1,14 +1,16 @@
-﻿ @model Category
+﻿@model Category
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Update";
+
+    SelectList selectListItems = new SelectList(ViewBag.MainCategories, nameof(Category.ID), nameof(Category.Name));
 }
 
-<h1>Create</h1>
+<h1>Update</h1>
 
 
 <div class="form-input">
-  <form method="POST" enctype="multipart/form-data">
+  <form method="POST">
     <div class="form-check">
       <input class="form-check-input isMain" type="checkbox" value="" id="flexCheckDefault isMain">
       <label class="form-check-label" for="flexCheckDefault">
@@ -21,15 +23,15 @@
     <span class="text-danger" asp-validation-for="Name"></span>
     </div>
     <div class="form-group imageContainer">
-     <label asp-for="File">Category Image</label>
-    <input asp-for="File" placeholder="Image...">
-    <span class="text-danger" asp-validation-for="File"></span>
+     <label asp-for="Image">Category Image</label>
+    <input asp-for="Image" placeholder="Image...">
+    <span class="text-danger" asp-validation-for="Image"></span>
     </div>
     <div class="form-group parentContainer">
     <label  asp-for="ParentID">ParentID</label>
-    <select asp-for="ParentID" class="form-select" asp-items="new SelectList(ViewBag.MainCategories,nameof(Category.ID),nameof(Category.Name))" aria-label="Default select example">
+    <select asp-for="ParentID" class="form-select" asp-items="@selectListItems"
+    aria-label="Default select example">
     </select>
-    <option value="">Select Main Category</option>
     <span class="text-danger" asp-validation-for="ParentID"></span>
     </div>
 
@@ -43,7 +45,7 @@
       <option value="usa">USA</option>
     </select>*@
   
-    <button type="submit" value="Submit">Create</button>
+    <button type="submit" value="Submit">Update</button>
   </form>
 </div>
 
