--- a/Areas/admin/Views/Category/Update.cshtml
+++ b/Areas/admin/Views/Category/Update.cshtml
@@ -10,7 +10,7 @@
 
 
 <div class="form-input">
-  <form method="POST">
+  <form method="POST" enctype="multipart/form-data">
     <div class="form-check">
       <input class="form-check-input isMain" type="checkbox" value="" id="flexCheckDefault isMain">
       <label class="form-check-label" for="flexCheckDefault">
@@ -23,9 +23,9 @@
     <span class="text-danger" asp-validation-for="Name"></span>
     </div>
     <div class="form-group imageContainer">
-     <label asp-for="Image">Category Image</label>
-    <input asp-for="Image" placeholder="Image...">
-    <span class="text-danger" asp-validation-for="Image"></span>
+     <label asp-for="File">Category Image</label>
+    <input asp-for="File" placeholder="Image...">
+    <span class="text-danger" asp-validation-for="File"></span>
     </div>
     <div class="form-group parentContainer">
     <label  asp-for="ParentID">ParentID</label>
