Created register controller

--- a/Views/Shared/Components/Header/Default.cshtml
+++ b/Views/Shared/Components/Header/Default.cshtml
@@ -37,10 +37,10 @@
                         <a href="blog.html" class="d-lg-show">Blog</a>
                         <a href="contact-us.html" class="d-lg-show">Contact Us</a>
                         <a href="my-account.html" class="d-lg-show">My Account</a>
-                        <a href="~/assets/ajax/login.html" class="d-lg-show login sign-in"><i
+                        <a  asp-controller="account" asp-action="login" class="d-lg-show"><i
                                 class="w-icon-account"></i>Sign In</a>
                         <span class="delimiter d-lg-show">/</span>
-                        <a href="~/assets/ajax/login.html" class="ml-0 d-lg-show login register">Register</a>
+                        <a asp-controller="account" asp-action="register" class="ml-0 d-lg-show">Register</a>
                     </div>
                 </div>
             </div>
