--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -626,6 +626,7 @@
     <!-- Main JS -->
     <script src="~/assets/js/main.min.js"></script>
     <script src="~/assets/js/script.js" asp-append-version="true"></script>
+    @RenderSection("Script",false)
 
     <script>
         $(document.ready(function () {
