--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using Wolmart.Ecommerce.ViewModels.CartViewModels
 @using Wolmart.Ecommerce.ViewModels.HeaderVM
 @using Wolmart.Ecommerce.ViewModels.HomeViewModels 
+@using Wolmart.Ecommerce.ViewModels.AccountViewModels
 @using Wolmart.Ecommerce.ViewModels
 
