--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -103,10 +103,20 @@
                         <a href="blog.html" class="d-lg-show">Blog</a>
                         <a href="contact-us.html" class="d-lg-show">Contact Us</a>
                         <a href="my-account.html" class="d-lg-show">My Account</a>
-                        <a asp-controller="account" asp-action="login" class="d-lg-show"><i
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a asp-controller="account" asp-action="login" class="d-lg-show"><i
+                                class="w-icon-account"></i>@User.Identity.Name</a>
+                            <span class="delimiter d-lg-show">/</span/>
+                            <a asp-controller="account" asp-action="logout" class="ml-0 d-lg-show">Sign Out</a>
+
+                        }
+                        else{
+                            <a asp-controller="account" asp-action="login" class="d-lg-show"><i
                                 class="w-icon-account"></i>Sign In</a>
-                        <span class="delimiter d-lg-show">/</span>
-                        <a asp-controller="account" asp-action="register" class="ml-0 d-lg-show">Register</a>
+                            <span class="delimiter d-lg-show">/</span>
+                          <a asp-controller="account" asp-action="register" class="ml-0 d-lg-show">Register</a>
+                        }
                     </div>
                 </div>
             </div>
