--- a/Areas/admin/Views/Product/Index.cshtml
+++ b/Areas/admin/Views/Product/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<Product>
 @{
     ViewData["Title"] = "Index";
+    int counter = 0;
 }
 
 <div class="row justify-content-between align-items-center">
@@ -16,16 +17,24 @@
   <thead>
     <tr>
       <th scope="col">#</th>
+      <th scope="col">Image</th>
       <th scope="col">Name</th>
+      <th scope="col">Price</th>
+      <th scope="col">Discounted Price</th>
     </tr>
   </thead>
   <tbody>
     @foreach (Product item in Model)
-    {
+        {
+            counter++;
             <tr>
-              <th scope="row">1</th>
+              <th>@counter</th>
+              <th>
+                  <img src="~/assets/images/products/@item.MainImage"/>
+              </th>
               <td>@item.Name</td>
-              <td>@item.Price</td>
+              <td>@item.Price.ToString("F2")</td>
+              <td>@item.DiscountedPrice.ToString("F2")</td>
             </tr>
     }
   </tbody>
