--- a/wwwroot/admin/assets/css/style.css
+++ b/wwwroot/admin/assets/css/style.css
@@ -5,9 +5,6 @@
     background: white;
 }
 
-.content .table{
-    margin-top: -150px;
-}
 
 .content h1{
     margin-top: 50px;
@@ -17,6 +14,14 @@
     margin-top: 55px;
 }
 
+.content .table{
+    margin-top: 48px !important
+}
+
+
+    .content .table img {
+        height: 158px;
+    }
 
 .form-input input[type=text], select {
     width: 100%;
